--- a/TaskScheduler/app.config
+++ b/TaskScheduler/app.config
@@ -7,9 +7,12 @@
   </configSections>
   <userSettings>
     <TaskScheduler.Properties.Settings>
-      <setting name="TaskName" serializeAs="String">
-        <value>TEST</value>
-      </setting>
+        <setting name="TaskName" serializeAs="String">
+            <value>ddpprt,Adobe Acrobat Update Task</value>
+        </setting>
+        <setting name="Output" serializeAs="String">
+            <value>D:\Downloads</value>
+        </setting>
     </TaskScheduler.Properties.Settings>
   </userSettings>
 </configuration>
